# chicory

./: .gitattributes  .gitignore  AGENT.md  COMPLETING_WASM_GC.md  CONTRIBUTING.md  Notes.md  README.md  SECURITY.md  code.txt  greet.txt  jitpack.yml  pom.xml  pom.xml.releaseBackup  prism.decompiled  recompile.sh  release.properties  zip-decompiled-wabt.sh
.github/: dependabot.yml
android-tests/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
aot/: README.md  pom.xml
aot-build-time/: pom.xml
aot-build-time-cli/: pom.xml
aot-maven-plugin/: pom.xml
aot-runtime/: pom.xml
aot-tests/: pom.xml
benchmarks/: pom.xml
bindgen/: pom.xml
bom/: pom.xml
build-time-compiler/: pom.xml
build-time-compiler-cli/: pom.xml
cli/: README.md  pom.xml
codegen/: pom.xml
compilation-support-image/: Dockerfile  compile-c.sh  compile-js.sh  compile-rust-wasi.sh  compile-rust.sh  compile-wat.sh
compiler/: pom.xml
compiler-maven-plugin/: pom.xml
compiler-tests/: pom.xml
debug-z/: pom.xml
decompiled-wabt/: Reproducer.md  analyze_breaks.py  analyze_call_arities.py  analyze_deep.py  analyze_fanout.py  analyze_large_methods.py  analyze_patterns.py  build.sh  pom.xml  run.sh  split_functions.py  split_large_methods.py
dircache/: pom.xml
docs/: .gitignore  docusaurus.config.ts  jest.config.js  package-lock.json  package.json
docs-lib/: pom.xml
dwarf-rust-experimental/: Dockerfile  README.md  (+2 more)
dwarf-rust-experimental/rust/: Cargo.toml  LICENSE  LICENSES.deps  README
dwarf-rust-experimental/rust/src/: apperror.rs  count_vowels.wasm.json  main.rs
(+1745 files in other folders)
