[package]
name = "dwarf-rust"
version = "0.1.0"
description = "WebAssembly DWARF parser and location resolver"
authors = ["Ingvar Stepanyan <rreverser@google.com>", "Hiram Chirino <hiram@hiramchirino.com>"]
edition = "2018"
publish = false
readme = "README"
license = "BSD-style"

[dependencies]
gimli = { version = "0.19.0", default-features = false, features = ["std", "read"] }
fallible-iterator = "0.2.0"
indexmap = "1.3.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.64"
